--- a/package.json
+++ b/package.json
@@ -18,12 +18,6 @@
     "eject": "react-scripts eject",
     "cypress": "npx cypress open"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -38,6 +32,7 @@
   },
   "devDependencies": {
     "cypress": "^10.3.1",
+    "eslint": "^8.20.0",
     "eslint-plugin-cypress": "^2.12.1"
   }
 }
